--- a/arguments.html
+++ b/arguments.html
@@ -19,7 +19,18 @@
 			innerFn();
 			alert(fun1.caller);
 		};
-		fun1(1,2,3);
+		//fun1(1,2,3);
+		function fun2(a,b){
+			var c=arguments[0];
+			a=1;
+			arguments[0]=2;
+			arguments[1]=3;
+			alert(arguments[0]);	//2
+			alert(a);	//2
+			alert(c);	//0
+			alert(b);	//3
+		}
+		fun2(0,0);	//结论：形参与实参是紧密关联的
 	</script>
 </head>
 <body>
